# spark-job-optimization-data-skew

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/sample/: customer_dim.csv  fact_events.csv
glue/: skew_join_optimization_glue.py
jobs/: skew_join_optimization.py
scripts/: generate_sample_data.py  package_glue_zip.py
src/skew_join_optimization/: __init__.py  benchmark.py  cli.py  config.py  data_generation.py  joins.py  spark.py
tests/: test_config.py  test_joins.py
