[project]
name = "spark-job-optimization-data-skew"
version = "0.1.0"
description = "PySpark demo for optimizing skewed joins with repartitioning, broadcast joins, and salting."
requires-python = ">=3.10"
dependencies = [
  "pyspark>=4.0,<5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
